# hoshinova

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  build.sh  config.example.toml  config.example.yaml  config.toml  go.mod  go.sum  main.go
.github/workflows/: build.yml  ci.yml  docker.yml
config/: config.go  config_test.go
logger/: logger.go
module/notifier/: discord.go  notifier.go
module/recorder/: recorder.go  ytarchive.go  ytarchive_util.go
module/scraper/: rss.go  scraper.go
module/uploader/: local.go  uploader.go
notifier/: discord.go  notifier.go
pubsub/: pubsub.go  pubsub_test.go
recorder/: callback_writer.go  recorder.go  ytarchive.go  ytarchive_util.go
rss/: rss.go
scraper/: rss.go  scraper.go
src/: config.rs  main.rs  msgbus.rs
src/config/: mod.rs
src/module/: mod.rs  notifier.rs  recorder.rs  scraper.rs  web.rs
src/module/recorder/: mod.rs  ytarchive.rs  ytdlp.rs
src/module/web/: handler.rs  index.html  mod.rs  script.js
src/web/: mod.rs
src/youtube/: channel.rs  mod.rs  video.rs
task/: orderedmap.old  task.go  taskman.old
taskman/: orderedmap.go  taskman.go
tui/: tui.go
uploader/: local.go  uploader.go
util/: ansi.go  callback_writer.go  ctxutil.go  debounce.go  tags.go
util/atomic/: atomic.go
util/kv/: kv.go  memory.go
watcher/: watcher.go
web/: .gitignore  .prettierrc.json  index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: api.ts  config.ts  tasks.ts
web/src/lotties/: SleepingPanda.tsx  sleeping-panda.json
web/src/pages/: ConfigPage.tsx  TasksPage.tsx
web/src/shared/: SuspenseLoader.tsx
