[package]
name = "hoshinova"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/HoloArchivists/hoshinova"
homepage = "https://github.com/HoloArchivists/hoshinova"

[dependencies]
# Async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.20.0", features = ["full"] }

# Web
actix-web = "4"
reqwest = { version = "0.11", features = ["gzip", "json"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

# Utilities
anyhow = "1.0"
lazy_static = "1.4.0"
const_format = { version = "0.2.26", features = ["const_generics"] }

# Serde
humantime = "2.1.0"
humantime-serde = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
quick-xml = { version = "0.23", features = ["serialize"] }
chrono = { version = "0.4.0", features = ["serde"] }
regex = "1"
serde_regex = "1.1.0"

# CLI
clap = { version = "3.2.8", features = ["derive"] }
env_logger = "0.8.4"
log = "0.4"

[profile.release]
lto = true
strip = true
