[package]
name = "hoshinova"
version = "0.2.4"
edition = "2021"
repository = "https://github.com/HoloArchivists/hoshinova"
homepage = "https://github.com/HoloArchivists/hoshinova"

[dependencies]
# Async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.20.0", features = ["full"] }

# Web
actix-web = "4"
reqwest = { version = "0.11", default-features = false, features = [
  "gzip", "json", "rustls-tls"
] }
mime_guess = "2"

# Utilities
anyhow = "1.0"
lazy_static = "1.4.0"
rust-embed = "6.4.0"
ts-rs = { version = "6.1", features = ["chrono-impl"] }
url = "2.2.2"

# Serde
humantime = "2.1.0"
humantime-serde = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
quick-xml = { version = "0.23", features = ["serialize"] }
chrono = { version = "0.4.0", features = ["serde"] }
regex = "1"
serde_regex = "1.1.0"
serde_json = "1.0"

# CLI
clap = { version = "3.2.8", features = ["derive"] }
env_logger = "0.8.4"
log = "0.4"

[build-dependencies]
chrono = "0.4.0"

[profile.release]
lto = true
strip = true
